--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
     implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.fragment:fragment:1.3.2'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
     implementation 'com.google.android.material:material:1.1.0'
